--- a/main.tex
+++ b/main.tex
@@ -106,6 +106,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \printbibliography[heading=bibintoc]
+\pagenumbering{Roman}
 
 \listoffigures
 \listoftables
