--- a/anhang.tex
+++ b/anhang.tex
@@ -79,6 +79,62 @@ END beh;
     \caption{VHDL-Quelltext eines 2-Bit-Multiplexers \cite[siehe][39--40]{kesel2013}}
 \end{code}
 
+\section{C++"=Quelltexte}
+\label{anhang:source:cpp}
+
+\subsection{Implementierung des SYCL-Puffer-Wrappers}
+\label{anhang:source:cpp:bufferwrapper}
+
+\begin{code}
+    \begin{minted}[fontsize=\small]{c++}
+namespace alpaka
+{
+    namespace mem
+    {
+        namespace buf
+        {
+            namespace sycl
+            {
+                namespace detail
+                {
+                    template <typename TBuf>
+                    struct buffer_wrapper
+                    {
+                        using buf_type = TBuf;
+                        using value_type = typename buf_type::value_type;
+                        using is_alpaka_sycl_buffer_wrapper = bool;
+
+                        buffer_wrapper(TBuf wrapped_buf) noexcept
+                        : buf{wrapped_buf}
+                        , dummy{std::aligned_alloc(alignof(value_type),
+                                                   sizeof(std::size_t)),
+                                [](void* ptr) { std::free(ptr); }}
+                        {
+                        }
+
+                        operator value_type*() noexcept
+                        {
+                            return reinterpret_cast<value_type*>(dummy.get());
+                        }
+
+                        operator const value_type*() const noexcept
+                        {
+                            return reinterpret_cast<const value_type*>(
+                                                                dummy.get());
+                        }
+
+                        TBuf buf;
+                        std::shared_ptr<void> dummy;
+                    };
+                }
+            }
+        }
+    }
+}
+    \end{minted}
+    \caption{Implementierung des SYCL-Puffer-Wrappers}
+\end{code}
+
 \chapter{Fehlerberichte und Korrekturen}
 \label{anhang:fehler}
 
@@ -98,6 +154,78 @@ END beh;
 
 \section{Diskussionen mit dem SYCL-Spezifikationskomitee}
 \label{anhang:diskussionen:syclspec}
+
+\subsection{Implicit accessor-to-pointer casts}
+\label{anhang:diskussion:syclspec:implicitaccessor}
+
+Original: \url{https://github.com/KhronosGroup/SYCL-Docs/issues/11}, zuletzt
+abgerufen am 06. November 2019.
+
+\begin{otherlanguage}{english}
+    \paragraph{Jan Stephan} This is a duplicate of triSYCL/triSYCL\#247, moving
+                            the discussion here.
+                            \subparagraph{The Problem} The SYCL specification
+                            (3.5.2.1) says the following:
+                            \begin{quote}
+                                Within kernels, accessors can be implicitly cast
+                                to C++ pointer types. The pointer types will
+                                contain a compile-time deduced address space.
+                                So, for example, if an accessor to global memory
+                                is cast to a C++ pointer, the C++ pointer type
+                                will have a global address space attribute
+                                attached to it. The address space attribute will
+                                be compile-time propagated to other pointer
+                                values when one pointer is initialized to
+                                another pointer value using a defined mechanism.
+                            \end{quote}
+                            This is not reflected in \texttt{accessor}'s
+                            interface and none of the publicly available
+                            implementations support this.
+                            \subparagraph{Example} $~$ \\
+                            \begin{code}
+                                \begin{minted}[fontsize=\small]{c++}
+void vec_add(const int* a, const int* b, int* c, std::size_t size);
+
+queue.submit([&](cl::sycl::handler& cgh)
+{
+    auto a = a_d.get_access<cl::sycl::access::mode::read>(cgh);
+    auto b = b_d.get_access<cl::sycl::access::mode::read>(cgh);
+    auto c = c_d.get_access<cl::sycl::access::mode::discard_write(cgh);
+
+    cgh.single_task<class vector_add>([=]()
+    {
+        // no known conversion from accessor to const int*
+        vec_add(a, b, c, 1024);
+    });
+});
+                                \end{minted}
+                            \end{code}
+                            \subparagraph{Use case}
+                            Libraries such as Alpaka or HPX provide abstraction
+                            layers over competing compute APIs such as CUDA.
+                            Unfortunately their API works with raw pointers in
+                            their abstract kernels. In order to implement a SYCL
+                            backend the \texttt{accessor} has to be explicitly
+                            transformed into a pointer right now (by going
+                            through \texttt{multi\_ptr}). Being able to do this
+                            implicitly would be a lot easier.
+                            \subparagraph{Possible solutions}
+                            \begin{enumerate}
+                                \item Remove the above wording and rely on
+                                      \texttt{multi\_ptr}'s conversion instead.
+                                \item Allow \texttt{accessor} to be implicitly
+                                      cast as well.
+                            \end{enumerate}
+    \paragraph{Ronan Keryell (Xilinx)} The working group is looking at this
+                                       internally.
+    \paragraph{Ruymán Reyes Castro (Codeplay)} Internal issue tracker: \url{https://gitlab.khronos.org/sycl/Specification/issues/258},
+                                               currently assigned to Codeplay.
+    \paragraph{Ruymán Reyes Castro} Decision has been to go for option 1, MR up
+                                    in: \#44
+    \paragraph{Gordon Brown (Codeplay)} SYCL working group: The above merge
+                                        request has been approved so we can
+                                        close this now.
+\end{otherlanguage}
 
 \subsection{Why is there no way to allocate local memory inside a ND-kernel
             (parallel\_for)?}\label{anhang:diskussionen:syclspec:staticshared}
@@ -174,11 +302,11 @@ void foo(int* vec);
                             Some implementations (like ComputeCpp) internally
                             use \texttt{\_\_global} to annotate the pointer
                             during device compilation. But even if there was a
-                            way to write something like
-                            \texttt{void foo(\_\_global int* vec)} (there isn't
-                            as far as I know, ComputeCpp complains if I do this)
-                            this would be a bad idea because the address space
-                            attributes are implementation-defined.
+                            way to write something like\\
+                            \texttt{void foo(\_\_global int* vec)}
+                            (there isn't as far as I know, ComputeCpp complains
+                            if I do this) this would be a bad idea because the
+                            address space attributes are implementation-defined.
                             \\
                             Why do we need this? Sadly, there are libraries /
                             frameworks out there that pass around raw pointers
@@ -189,13 +317,11 @@ void foo(int* vec);
                             directly. This will fail because the call is
                             ambigous.
     \paragraph{Ronan Keryell (Xilinx)} Interestingly, Intel is trying hard to
-                                       hide what you are asking for:
+                                       hide what you are asking for:\\
                                        \texttt{intel/llvm\#348}\footnote{Verweis
                                        auf Änderung des Intel-SYCL-Compilers, 
-                                       J.S.}
-                                       \\
-                                       Can you imagine an API that could be
-                                       added to the standard?
+                                       J.S.}. Can you imagine an API that could
+                                       be added to the standard?
     \paragraph{Jan Stephan} An easy solution that doesn't require an API change
                             would be to correctly deduce the overloads, i.e.
                             \texttt{foo(global\_ptr)}, \texttt{foo(local\_ptr)}
