--- a/anhang.tex
+++ b/anhang.tex
@@ -231,7 +231,7 @@ queue.submit([&](cl::sycl::handler& cgh)
             (parallel\_for)?}\label{anhang:diskussionen:syclspec:staticshared}
 
 Original: \url{https://github.com/KhronosGroup/SYCL-Docs/issues/20}, zuletzt
-abgerufen am 07. August 2019.
+abgerufen am 06. November 2019.
 
 \begin{otherlanguage}{english}
     \paragraph{Jan Stephan} I know this is possible using the hierarchical
@@ -263,6 +263,10 @@ abgerufen am 07. August 2019.
                               plain GCC or Clang to debug a SYCL program just by
                               running it on my laptop. I find this an amazing
                               feature of SYCL...
+    \paragraph{Gordon Brown (Codeplay)} SYCL working group: We agree this would
+                                        be a useful feature to have, we are
+                                        investigating how to potentially support
+                                        this internally.
 \end{otherlanguage}
 
 \newpage
@@ -270,7 +274,7 @@ abgerufen am 07. August 2019.
 \label{anhang:diskussionen:syclspec:addressspace}
 
 Original: \url{https://github.com/KhronosGroup/SYCL-Docs/issues/21}, zuletzt
-abgerufen am 15. August 2019.
+abgerufen am 06. November 2019.
 
 \begin{otherlanguage}{english}
     \paragraph{Jan Stephan} Imagine a device-side function with the following
